# ccache

./: .gitignore  Cargo.toml  README.md
benches/: benchmarks.rs
benches/ccache_bench/: Cargo.toml  Gemfile  LICENSE.txt  README.md  ccache_bench.gemspec
benches/ccache_bench/lib/: ccache_bench.rb
benches/ccache_bench/lib/ccache_bench/: version.rb
benches/ccache_bench/spec/: ccache_bench_spec.rb  spec_helper.rb
benches/ccache_bench/src/: lib.rs
ccache_go/: Cargo.toml  README.md  ccache_go.c  example.c  go.mod  main.go  serisizor.go
ccache_go/src/: lib.rs
ccache_rb/: Cargo.toml  Gemfile  README.md  ccache_rb.gemspec
ccache_rb/lib/: ccache_list.rb  ccache_rb.rb  ruby_store.rb
ccache_rb/lib/ccache_rb/: version.rb
ccache_rb/sig/: ccache_rb.rbs
ccache_rb/spec/: ccache_rb_spec.rb  spec_helper.rb
ccache_rb/src/: lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: http_server.rs  probe.py  redis_benchmarks.rs
examples/ruby_example/: Cargo.toml  Gemfile  README.md  ruby_example.gemspec
examples/ruby_example/lib/: ruby_example.rb
examples/ruby_example/lib/ruby_example/: version.rb
examples/ruby_example/spec/: ccache_list_spec.rb  ruby_example_spec.rb  spec_helper.rb
examples/ruby_example/src/: lib.rs
src/: errors.rs  in_memory_store.rs  lib.rs  partitioned_hash_map.rs  rust_derive.rs  serializable.rs  serialize.rs  serializer.rs  trace.rs
