workspace = { members = ["derive"], exclude = ["benches/ccache_bench", "ccache_rb", "ccache_go"] }

[package]
name = "ccache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.8.0"
redis = "0.25.2"
bincode = "2.0.0-rc.3"
flate2 = "1.0"
base64 = "0.12.0"
async-std = { version = "1.8.0", features = ["attributes"] }
likely_stable = "0.1.2"
derive = { version = "0.1.0", path = "derive" }
uuid = { version = "1.8.0", features = ["v4"] }
probe = "0.5"


[dev-dependencies]
tide = "0.17.0-beta.1"
criterion = "0.4.0"
rand = "0.8.4"
rutie = { git = "https://github.com/yfractal/rutie.git", branch = "master"}
