[package]
name = "ccache_rb"
version = "0.1.0"
edition = "2021"

[dependencies]
ccache = { path = "../" }
derive = { version = "0.1.0", path = "../derive" }
rutie = { git = "https://github.com/yfractal/rutie.git", branch = "master"}
redis = "0.25.2"
lazy_static = "1.4.0"
flate2 = "1.0"
bincode = "2.0.0-rc.3"

[lib]
name = "ruby_example"
crate-type = ["dylib"]
